language_tests/outputs/invalid/task_one_shot.out
error: use of moved value 'task'
 -> language_tests/source_files/invalid/task_one_shot.tr:4:18
	    let _ = await task.result()
	                  ^^^^
